# proxyfarm

./: .gitignore  ARCHITECTURE.md  PROXY_USAGE.md  README.md  config.example.yaml  connection.txt  instructions.md  proxy_full.py  pyproject.toml  requirements-proxy.txt  requirements.txt  set_up_modems.sh  test_proxy.sh
config/: proxy.yaml
docs/: LOAD_BALANCING.md  MIGRATION_TO_PYTHON_PROXY.md  NETWORK_TOPOLOGY.md  PROXY_SERVER.md  QUICK_REFERENCE.md  SCRIPTS_ORGANIZATION.md  TROUBLESHOOTING.md
scripts/: README.md  check_system.sh  fix_modems.sh  install.sh  install_app.sh  install_nm_dispatcher.sh  install_routing_service.sh  migrate_to_python_proxy.sh  nm-dispatcher-routing.sh  restore_internet.sh  setup_modem_routing.sh  setup_squid.sh  setup_vps_proxy_forward.sh  test_balancing.sh  uninstall.sh  wait_for_modems.sh
scripts/lib/: common.sh
scripts/setup/: bootstrap.sh  nm-dispatcher.sh  routing.sh  squid.sh  systemd-service.sh
src/proxyfarm/: __init__.py  auth.py  config.py  main.py  schemas.py
src/proxyfarm/api/: modems.py  proxy.py  router.py  system.py  ussd.py
src/proxyfarm/core/: modem.py  network.py  rotation.py  squid.py  ussd.py
src/proxyfarm/services/: __init__.py  monitor.py
systemd/: modem-routing.service  modem-routing.timer  proxyfarm-proxy.service  proxyfarm.service
