[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proxyfarm"
version = "0.1.0"
description = "LTE modem management service with HTTP API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
proxyfarm = "proxyfarm.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/proxyfarm"]
